--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.5.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-data": "^1.3.1",
     "gulp-debug": "^4.0.0",
     "gulp-eslint": "^5.0.0",
     "gulp-htmlmin": "^4.0.0",
@@ -52,6 +53,7 @@
     "gulp-rev-collector": "^1.3.1",
     "gulp-serve": "^1.4.0",
     "gulp-size": "^3.0.0",
+    "gulp-swig": "^0.8.0",
     "gulp-uglify": "^3.0.1",
     "gulp-url-prefixer": "0.0.6",
     "gulplog": "^1.0.0",
@@ -59,6 +61,7 @@
     "http-serve": "^1.0.1",
     "os": "^0.1.1",
     "postcss-px2rpx": "0.0.4",
+    "through2": "^2.0.3",
     "wx-px2rpx": "^1.2.2",
     "yargs": "^11.0.0"
   },
